--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html>
-<head></head>
+<head>
+  <style>
+     body{
+         text-align: center;
+         background-image: linear-gradient(rgb(55, 121, 231), rgb(222, 222, 222));
+         min-width: 100%;
+         min-height: 100%;
+      }
+  </style>
+</head>
+
 <body>
-<h1>My Website Mr Higgins</h1>
+<h1>All About Chelsea</h1>
+
+<h2>
+Chelsea's History
+</h2>
+
+<h3>
+Chelsea is one of five clubs and the first English club to have won all three pre-1999 main European club competitions, the "European Treble" of the European Cup/UEFA Champions League, European/UEFA Cup Winners' Cup, and UEFA Cup/UEFA Europa League.[5] They are the only club to have won all three major European competitions twice. They are the only London club to have won the Champions League and the Club World Cup.[6] Domestically, the club has won six league titles, eight FA Cups, five League Cups, and four FA Community Shields. Internationally, they have won the UEFA Champions League, the UEFA Europa League, the UEFA Cup Winners' Cup and the UEFA Super Cup twice each, and the FIFA Club World Cup once. In terms of overall trophies won, Chelsea is the fifth-most successful club in English football.
+</h3>
+
 </body>
+
 </html>
+<img alt src="https://i.dailymail.co.uk/i/pix/2024/09/11/chelsea-topic-preview.jpg">
