--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@ Chelsea is one of five clubs and the first English club to have won all three pr
 </h3>
 
 </body>
-
+<img alt src="https://resources.premierleague.pulselive.com/photo-resources/2024/12/01/4dbe725f-a465-4e85-9045-b15309c2e581/Cole-Palmer-v-Villa.jpg?width=600&height=400"
 </html>
 <h3>
 More information
 </h3>
 Chelsea Football Club is a professional football club based in Fulham, West London, England. They compete in the Premier League, the top tier of English football. Founded in 1905, the team play their home games at Stamford Bridge.[4] The club won their first major honour, the League championship, in 1955. They won the FA Cup for the first time in 1970, won their first European honour, the Cup Winners' Cup, in 1971, and became the third English club to win the Club World Cup in 2022.
 
-<img alt src="https://i.dailymail.co.uk/i/pix/2024/09/11/chelsea-topic-preview.jp"
+<h4>
+Chelsea's Goals From the 23/24 Season
+</h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ze6qKJkf_-g?si=4AciCMko6y6x2AzJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<h5>
+Chelsea and The Early Years: Building Foundations
+</h5>
+
+Founded in 1905, Chelsea initially experienced limited success. The club spent much of its early years fluctuating between divisions, striving to establish a strong identity. Their first major trophy, the league championship, came in 1955. This win marked a turning point, bringing newfound respect and momentum. Despite this, Chelsea spent the next few decades in and out of the top ranks, consistently pushing but facing financial and competitive struggles. In the 1990s, the club began to see more stability. Under the management of Glenn Hoddle and later Gianluca Vialli, Chelsea won their first FA Cup in 26 years (in 1997) and made significant strides in European competitions. Their resurgence set the stage for a new era
