--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
       margin-top: 50px;
     }
 
+    footer a {
+      color: #FFD700;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      color: white;
+    }
+
     /* Responsive Styles */
     @media (max-width: 768px) {
       body {
@@ -217,6 +227,14 @@
     </p>
   </section>
 
-  <!-- Chelsea FC Image -->
-  <section>
-    <img src="https://resources.premierleague.pulselive
+  
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2024 Chelsea FC. All rights reserved.</p>
+    <p>Visit the official <a href="https://www.chelseafc.com/" target="_blank">Chelsea FC website</a> for more information.</p>
+  </footer>
+
+</body>
+</html>
