--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
       <li><a href="#goals">Chelsea Goals (23/24)</a></li>
       <li><a href="#early-years">Early Years</a></li>
       <li><a href="#abramovich-era">The Abramovich Era</a></li>
+      <!-- Added Google Form link -->
+      <li><a href="https://docs.google.com/forms/d/1oO8xYUKHpKPUxCZF5dTFprCPd18Jtjh4CkonXSA10e0/viewform" target="_blank">Feedback Form</a></li>
     </ul>
   </nav>
 
@@ -225,9 +227,6 @@
     <p>
       In 2003, Russian billionaire Roman Abramovich purchased Chelsea, bringing unprecedented investment and ambition. Abramovich’s financial backing and vision transformed Chelsea into a powerhouse in English football almost overnight. With funds to attract top talent, the club brought in stars like Didier Drogba, Frank Lampard, and Petr Čech, establishing a core group of players that would become club legends. Abramovich’s appointment of José Mourinho in 2004 marked the beginning of Chelsea’s dominance in the Premier League. Known for his tactical acumen and winning mentality, Mourinho led the team to back-to-back league titles in 2005 and 2006. Chelsea’s defensive solidity, combined with attacking power, made them nearly unbeatable. Mourinho’s influence reshaped Chelsea’s identity, instilling a culture of resilience and a thirst for titles.
     </p>
-  </section>
-
-  
   </section>
 
   <!-- Footer -->
